# orion_heir_translator

./: .gitignore  README.md  mlp_fhe.mlir  pyproject.toml  requirements.txt  setup.py
.github/workflows/: formatting.yml
examples/: minimal_resnet.py  mlp.py  resnet.py
passes/: ckks-matmul-lowering.py
src/orion_heir/: __init__.py
src/orion_heir/core/: __init__.py  constants.py  operation_registry.py  translator.py  type_builder.py  types.py
src/orion_heir/dialects/: __init__.py  ckks.py  declarative_parser.py  lwe.py  lwe_traits.py  mgmt.py  mod_arith.py  orion.py  polynomial.py  rns.py
src/orion_heir/examples/: basic_usage.py  orion_mlp_to_mlir.py
src/orion_heir/frontends/: __init__.py
src/orion_heir/frontends/orion/: data_exporter.py  operation_extractor.py  orion_frontend.py  scheme_params.py
src/orion_heir/passes/: __init__.py  ckks-linear-transform-lowering.py
src/orion_heir/tools/: __init__.py  common_utils.py  orion_heir_driver.py
tests/: simple_test.py
